--- a/css/styles.css
+++ b/css/styles.css
@@ -344,3 +344,24 @@ footer {
   background-size: cover;
 
 }
+
+
+
+
+/*form style*/
+
+.kotsivfo {
+  border-radius: 10px;
+  background-color: #ff7aff;
+  padding: 8px 8px 8px 8px; /*top right bottom left*/
+  border: 3px solid #fff;
+}
+
+.kotsivfomsg {
+  width: 800px;
+  height: 400px;
+  border-radius: 10px;
+  background-color: #ff7aff;
+  padding: 8px 8px 8px 8px; /*top right bottom left*/
+  border: 3px solid #fff;
+}
